final changes, final deploy, interfacePage.js removed the rename button, fixed the on scroll component in profilePage. Fixed padding in register page.

--- a/functions/views/register.hbs
+++ b/functions/views/register.hbs
@@ -1,6 +1,6 @@
 <!-- Register Section --->
-<div class="container formRegister">
-    <form id="reg-form">
+<div class="container registeringPage">
+    <form id="reg-form" class=" mt-5 pt-4">
         <div class="form-group headingLabel text-center">
             <header> Register </header><br>
         </div>
@@ -25,14 +25,14 @@
             <div class="form-group grp3 row justify-content-center">
                 <div class="col-lg-6">
                     <label for="password"> Password</label>
-                    <input type="password" class="form-control" id="passwordInput" aria-describedby="passwordInput" placeholder="Shh.. Keep this a secret">
+                    <input type="password" class="form-control" id="passwordInput" aria-describedby="passwordInput" placeholder="Shh... Keep this a secret">
                 </div>
             </div>
             <!-- confirm password -->
             <div class="form-group grp4 row justify-content-center">
                 <div class="col-lg-6">
                     <label for="password"> Re-enter Password</label>
-                    <input type="password" class="form-control" id="passwordConfirmInput" aria-describedby="passwordInput" placeholder="Confirm the password">
+                    <input type="password" class="form-control" id="passwordConfirmInput" aria-describedby="passwordInput" placeholder="Confirm">
                 </div>
             </div>
             <!-- button submit -->
