--- a/functions/views/cookiePage.hbs
+++ b/functions/views/cookiePage.hbs
@@ -62,9 +62,7 @@
 
     <p>Hopefully that has clarified things for you and as was previously mentioned if there is something that you
         aren't sure whether you need or not it's usually safer to leave cookies enabled in case it does interact with
-        one of the features you use on our site. This Cookies Policy was created with the help of the Generator of <a
-            href="https://cookiepolicygenerator.com">GDPR Cookies Policy Template</a> and the <a href="https://cookiespolicytemplate.com/">GDPR
-            Cookies Policy Template</a>.</p>
+        one of the features you use on our site.</p>
 
     <p>However if you are still looking for more information then you can contact us through one of our preferred
         contact methods:</p>
